--- a/p8105_hw2_hm2900.md
+++ b/p8105_hw2_hm2900.md
@@ -14,7 +14,7 @@ library(tidyverse)
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
-## Load the NYC Transit Data
+# Problem 1
 
 Read and clean the data.retain line, station, name, station latitude /
 longitude, routes served, entry, vending, entrance type, and ADA
@@ -22,21 +22,151 @@ compliance.
 
 ``` r
 nyc_transit_df = 
-  read_csv("./NYC_Transit_Subway_Entrance_And_Exit_Data.csv") %>% 
+  read_csv(
+    "./NYC_Transit_Subway_Entrance_And_Exit_Data.csv", 
+    col_types = cols(Route8 = "c", Route9 = "c", Route10 = "c", Route11 = "c")) %>% 
   janitor::clean_names() %>%
-  select(-division, -staffing, -staff_hours, -free_crossover, 
-         -north_south_street, -east_west_street, -corner, -entrance_latitude, 
-         -entrance_longitude, -station_location, -entrance_location, -exit_only, 
-         -ada_notes) %>%
-  mutate(entry = recode(entry, "YES" = 1, "NO" = 0))
+  select(
+    line, station_name, station_latitude, station_longitude, 
+    starts_with("route"), entry, exit_only, vending, entrance_type, 
+    ada) %>% 
+  mutate(entry = recode(entry, "YES" = TRUE, "NO" = FALSE))
 ```
 
-    ## Rows: 1868 Columns: 32
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## chr (22): Division, Line, Station Name, Route1, Route2, Route3, Route4, Rout...
-    ## dbl  (8): Station Latitude, Station Longitude, Route8, Route9, Route10, Rout...
-    ## lgl  (2): ADA, Free Crossover
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+The data set contains 19 variables: `line`, `station_name`,
+\``station_latitude`, `station_longitude`, `route1`-`route11`, `entry`,
+`exit_only`, `entrance_type`, `vending`, and `ada`. For the data
+cleaning steps, first I cleaned the variables’ names in the dataset,
+then I used selected the columns that I want. Finally I changed the
+entry variable from character (YES vs NO) to a logical variable. The
+dimension of the resulting dataset is 1,868 × 19. These data are not
+tidy enough since route number should be a variable, as should route.
+That is, to obtain a tidy dataset we would need to convert `route`
+variables from wide to long format.
+
+## How many distinct stations are there?
+
+``` r
+nyc_transit_df %>% 
+  select(station_name, line) %>% 
+  distinct
+```
+
+    ## # A tibble: 465 × 2
+    ##    station_name             line    
+    ##    <chr>                    <chr>   
+    ##  1 25th St                  4 Avenue
+    ##  2 36th St                  4 Avenue
+    ##  3 45th St                  4 Avenue
+    ##  4 53rd St                  4 Avenue
+    ##  5 59th St                  4 Avenue
+    ##  6 77th St                  4 Avenue
+    ##  7 86th St                  4 Avenue
+    ##  8 95th St                  4 Avenue
+    ##  9 9th St                   4 Avenue
+    ## 10 Atlantic Av-Barclays Ctr 4 Avenue
+    ## # … with 455 more rows
+
+There are 465 distinct stations.
+
+## How many stations are ADA compliant?
+
+``` r
+nyc_transit_df %>% 
+  filter(ada == TRUE) %>%
+  select(station_name, line) %>% 
+  distinct 
+```
+
+    ## # A tibble: 84 × 2
+    ##    station_name                   line           
+    ##    <chr>                          <chr>          
+    ##  1 Atlantic Av-Barclays Ctr       4 Avenue       
+    ##  2 DeKalb Av                      4 Avenue       
+    ##  3 Pacific St                     4 Avenue       
+    ##  4 Grand Central                  42nd St Shuttle
+    ##  5 34th St                        6 Avenue       
+    ##  6 47-50th Sts Rockefeller Center 6 Avenue       
+    ##  7 Church Av                      6 Avenue       
+    ##  8 21st St                        63rd Street    
+    ##  9 Lexington Av                   63rd Street    
+    ## 10 Roosevelt Island               63rd Street    
+    ## # … with 74 more rows
+
+There are 84 stations that are ADA compliant.
+
+## What proportion of station entrances / exits without vending allow entrance?
+
+``` r
+nyc_transit_df %>%
+  filter(vending == "NO") %>% 
+  pull(entry) %>% 
+  mean
+```
+
+    ## [1] 0.3770492
+
+The proportion station entrances / exits without vending is 37.7%.
+
+## How many distinct stations serve the A train? Of the stations that serve the A train, how many are ADA compliant?
+
+``` r
+nyc_transit_df %>% 
+  pivot_longer(
+    route1:route11,
+    names_to = "route_number",
+    values_to = "route") %>% 
+  filter(route == "A") %>% 
+  select(station_name, line) %>% 
+  distinct
+```
+
+    ## # A tibble: 60 × 2
+    ##    station_name                  line           
+    ##    <chr>                         <chr>          
+    ##  1 Times Square                  42nd St Shuttle
+    ##  2 125th St                      8 Avenue       
+    ##  3 145th St                      8 Avenue       
+    ##  4 14th St                       8 Avenue       
+    ##  5 168th St - Washington Heights 8 Avenue       
+    ##  6 175th St                      8 Avenue       
+    ##  7 181st St                      8 Avenue       
+    ##  8 190th St                      8 Avenue       
+    ##  9 34th St                       8 Avenue       
+    ## 10 42nd St                       8 Avenue       
+    ## # … with 50 more rows
+
+``` r
+nyc_transit_df %>% 
+  pivot_longer(
+    route1:route11,
+    names_to = "route_number",
+    values_to = "route") %>% 
+  filter(route == "A", ada == TRUE) %>% 
+  select(station_name, line) %>% 
+  distinct
+```
+
+    ## # A tibble: 17 × 2
+    ##    station_name                  line            
+    ##    <chr>                         <chr>           
+    ##  1 14th St                       8 Avenue        
+    ##  2 168th St - Washington Heights 8 Avenue        
+    ##  3 175th St                      8 Avenue        
+    ##  4 34th St                       8 Avenue        
+    ##  5 42nd St                       8 Avenue        
+    ##  6 59th St                       8 Avenue        
+    ##  7 Inwood - 207th St             8 Avenue        
+    ##  8 West 4th St                   8 Avenue        
+    ##  9 World Trade Center            8 Avenue        
+    ## 10 Times Square-42nd St          Broadway        
+    ## 11 59th St-Columbus Circle       Broadway-7th Ave
+    ## 12 Times Square                  Broadway-7th Ave
+    ## 13 8th Av                        Canarsie        
+    ## 14 Franklin Av                   Franklin        
+    ## 15 Euclid Av                     Fulton          
+    ## 16 Franklin Av                   Fulton          
+    ## 17 Howard Beach                  Rockaway
+
+There are 60 distinct stations serve the A train. Of the stations that
+serve the A train, there are 17 stations that are ADA compliant.
