--- a/p8105_hw2_hm2900.Rmd
+++ b/p8105_hw2_hm2900.Rmd
@@ -3,9 +3,10 @@ title: "p8105_hw2_hm2900"
 output: github_document
 ---
 
-```{r setup}
+```{r setup, message = FALSE}
 library(tidyverse)
 library(readxl)
+library(lubridate)
 ```
 
 # Problem 1
@@ -25,8 +26,8 @@ nyc_transit_df =
   mutate(entry = recode(entry, "YES" = TRUE, "NO" = FALSE))
 ```
 
-The data set contains 19 variables: `line`, `station_name`, ``station_latitude`, `station_longitude`, `route1`-`route11`, `entry`, `exit_only`, `entrance_type`, `vending`, and `ada`. 
-For the data cleaning steps, first I cleaned the variables' names in the dataset, then I used selected the columns that I want. Finally I changed the entry variable from character (YES vs NO) to a logical variable. The dimension of the resulting dataset is 1,868 × 19. 
+The data set contains 20 variables: `r colnames(nyc_transit_df)`. 
+For the data cleaning steps, first I cleaned the variables' names in the dataset, then I used selected the columns that I want. Finally I changed the entry variable from character (YES vs NO) to a logical variable. The dimension of the resulting dataset is `r nrow(nyc_transit_df)` × `r ncol(nyc_transit_df)`. 
 These data are not tidy enough since route number should be a variable, as should route. That is, to obtain a tidy dataset we would need to convert `route` variables from wide to long format.
 
 ## How many distinct stations are there?
@@ -127,11 +128,70 @@ The total weight of trash collected by Professor Trash Wheel is `r sum(pull(prof
 The total number of sports balls collected by Mr. Trash Wheel in 2020 is `r sum(pull(filter(mr_trash_df, year == 2020), sports_balls))`.
 
 
+# Problem 3
+
+Load and clean the data in pols-month.csv.
+
+```{r message = FALSE}
+pols_month = 
+  read_csv("./pols-month.csv") %>%
+  separate(mon, into = c("year", "month", "day")) %>%
+  mutate(year = as.numeric(year),
+         month = month.name[as.numeric(month)], 
+         president = recode(prez_dem, `0` = "gop", `1` = "dem")) %>%
+  select(-day, -prez_dem, -prez_gop)
+pols_month
+```
+
+Load and clean the data in snp.csv using a similar process to the above. 
+
+```{r message = FALSE}
+snp = 
+  read_csv("./snp.csv") %>%
+  mutate(date = mdy(date)) %>%
+  separate(date, into = c("year", "month", "day")) %>%
+  mutate(year = as.numeric(year),
+         month = month.name[as.numeric(month)]) %>%
+  select(-day) %>%
+  arrange(year, month)
+snp
+```
+
+Load and tidy the unemployment data so that it can be merged with the previous datasets.
+
+```{r message = FALSE}
+unemployment = 
+  read_csv("./unemployment.csv") %>%
+  pivot_longer(
+    Jan:Dec, 
+    names_to = "month",
+    values_to = "percentage") %>%
+  mutate(month = match(month,month.abb),
+         month = month.name[as.numeric(month)]) %>%
+  janitor::clean_names()
+unemployment  
+```
+
+Join the datasets by merging snp into pols, and merging unemployment into the result.
+
+```{r message = FALSE}
+merge_pols_snp = 
+  left_join(pols_month, snp, by = c("year", "month"))
+merge_pols_snp
 
 
+merge_all = 
+  left_join(merge_pols_snp, unemployment, by = c("year", "month"))
+merge_all
+```
 
+In dataset "pols_month", the dimension of dataset is `r nrow(pols_month)` × `r ncol(pols_month)`, the range of year is from `r min(pull(pols_month, year))` to `r max(pull(pols_month, year))` with key variables: `r colnames(pols_month)`.
 
+In dataset "snp", the dimension of dataset is `r nrow(snp)` × `r ncol(snp)`, the range of year is from `r min(pull(snp, year))` to `r max(pull(snp, year))`, with key variables: `r colnames(snp)`. The variable `r colnames(snp)[3]` represents the closing values of the S&P stock index on the associated date.
 
+In dataset "unemployment", the dimension of dataset is `r nrow(unemployment)` × `r ncol(unemployment)`, the range of year is from `r min(pull(unemployment, year))` to `r max(pull(unemployment, year))`, with key variables: `r colnames(unemployment)`. The variable `r colnames(unemployment)[3]` represents percentage of unemployment in the associated month of the associated year.
+
+In the resulting dataset "merge_all", the dimension of dataset is `r nrow(merge_all)` × `r ncol(merge_all)`, the range of year is from `r min(pull(merge_all, year))` to `r max(pull(merge_all, year))`, with key variables: `r colnames(merge_all)`.
 
 
 
