--- a/p8105_hw2_hm2900.md
+++ b/p8105_hw2_hm2900.md
@@ -3,19 +3,8 @@ p8105_hw2_hm2900
 
 ``` r
 library(tidyverse)
-```
-
-    ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
-    ## ✔ ggplot2 3.3.6      ✔ purrr   0.3.4 
-    ## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
-    ## ✔ tidyr   1.2.0      ✔ stringr 1.4.1 
-    ## ✔ readr   2.1.2      ✔ forcats 0.5.2 
-    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-    ## ✖ dplyr::filter() masks stats::filter()
-    ## ✖ dplyr::lag()    masks stats::lag()
-
-``` r
 library(readxl)
+library(lubridate)
 ```
 
 # Problem 1
@@ -37,16 +26,17 @@ nyc_transit_df =
   mutate(entry = recode(entry, "YES" = TRUE, "NO" = FALSE))
 ```
 
-The data set contains 19 variables: `line`, `station_name`,
-\``station_latitude`, `station_longitude`, `route1`-`route11`, `entry`,
-`exit_only`, `entrance_type`, `vending`, and `ada`. For the data
-cleaning steps, first I cleaned the variables’ names in the dataset,
-then I used selected the columns that I want. Finally I changed the
-entry variable from character (YES vs NO) to a logical variable. The
-dimension of the resulting dataset is 1,868 × 19. These data are not
-tidy enough since route number should be a variable, as should route.
-That is, to obtain a tidy dataset we would need to convert `route`
-variables from wide to long format.
+The data set contains 20 variables: line, station_name,
+station_latitude, station_longitude, route1, route2, route3, route4,
+route5, route6, route7, route8, route9, route10, route11, entry,
+exit_only, vending, entrance_type, ada. For the data cleaning steps,
+first I cleaned the variables’ names in the dataset, then I used
+selected the columns that I want. Finally I changed the entry variable
+from character (YES vs NO) to a logical variable. The dimension of the
+resulting dataset is 1868 × 20. These data are not tidy enough since
+route number should be a variable, as should route. That is, to obtain a
+tidy dataset we would need to convert `route` variables from wide to
+long format.
 
 ## How many distinct stations are there?
 
@@ -284,3 +274,158 @@ grocery_bags, chip_bags, sports_balls, homes_powered.
 The total weight of trash collected by Professor Trash Wheel is 190.12
 tons. The total number of sports balls collected by Mr. Trash Wheel in
 2020 is 856.
+
+# Problem 3
+
+Load and clean the data in pols-month.csv.
+
+``` r
+pols_month = 
+  read_csv("./pols-month.csv") %>%
+  separate(mon, into = c("year", "month", "day")) %>%
+  mutate(year = as.numeric(year),
+         month = month.name[as.numeric(month)], 
+         president = recode(prez_dem, `0` = "gop", `1` = "dem")) %>%
+  select(-day, -prez_dem, -prez_gop)
+pols_month
+```
+
+    ## # A tibble: 822 × 9
+    ##     year month     gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem president
+    ##    <dbl> <chr>       <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr>    
+    ##  1  1947 January        23      51     253      23      45     198 dem      
+    ##  2  1947 February       23      51     253      23      45     198 dem      
+    ##  3  1947 March          23      51     253      23      45     198 dem      
+    ##  4  1947 April          23      51     253      23      45     198 dem      
+    ##  5  1947 May            23      51     253      23      45     198 dem      
+    ##  6  1947 June           23      51     253      23      45     198 dem      
+    ##  7  1947 July           23      51     253      23      45     198 dem      
+    ##  8  1947 August         23      51     253      23      45     198 dem      
+    ##  9  1947 September      23      51     253      23      45     198 dem      
+    ## 10  1947 October        23      51     253      23      45     198 dem      
+    ## # … with 812 more rows
+
+Load and clean the data in snp.csv using a similar process to the above.
+
+``` r
+snp = 
+  read_csv("./snp.csv") %>%
+  mutate(date = mdy(date)) %>%
+  separate(date, into = c("year", "month", "day")) %>%
+  mutate(year = as.numeric(year),
+         month = month.name[as.numeric(month)]) %>%
+  select(-day) %>%
+  arrange(year, month)
+snp
+```
+
+    ## # A tibble: 787 × 3
+    ##     year month    close
+    ##    <dbl> <chr>    <dbl>
+    ##  1  1969 April    104. 
+    ##  2  1969 August    95.5
+    ##  3  1969 December  92.1
+    ##  4  1969 February  98.1
+    ##  5  1969 January  103. 
+    ##  6  1969 July      91.8
+    ##  7  1969 June      97.7
+    ##  8  1969 March    102. 
+    ##  9  1969 May      103. 
+    ## 10  1969 November  93.8
+    ## # … with 777 more rows
+
+Load and tidy the unemployment data so that it can be merged with the
+previous datasets.
+
+``` r
+unemployment = 
+  read_csv("./unemployment.csv") %>%
+  pivot_longer(
+    Jan:Dec, 
+    names_to = "month",
+    values_to = "percentage") %>%
+  mutate(month = match(month,month.abb),
+         month = month.name[as.numeric(month)]) %>%
+  janitor::clean_names()
+unemployment  
+```
+
+    ## # A tibble: 816 × 3
+    ##     year month     percentage
+    ##    <dbl> <chr>          <dbl>
+    ##  1  1948 January          3.4
+    ##  2  1948 February         3.8
+    ##  3  1948 March            4  
+    ##  4  1948 April            3.9
+    ##  5  1948 May              3.5
+    ##  6  1948 June             3.6
+    ##  7  1948 July             3.6
+    ##  8  1948 August           3.9
+    ##  9  1948 September        3.8
+    ## 10  1948 October          3.7
+    ## # … with 806 more rows
+
+Join the datasets by merging snp into pols, and merging unemployment
+into the result.
+
+``` r
+merge_pols_snp = 
+  left_join(pols_month, snp, by = c("year", "month"))
+merge_pols_snp
+```
+
+    ## # A tibble: 822 × 10
+    ##     year month     gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem presi…¹ close
+    ##    <dbl> <chr>       <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr>   <dbl>
+    ##  1  1947 January        23      51     253      23      45     198 dem        NA
+    ##  2  1947 February       23      51     253      23      45     198 dem        NA
+    ##  3  1947 March          23      51     253      23      45     198 dem        NA
+    ##  4  1947 April          23      51     253      23      45     198 dem        NA
+    ##  5  1947 May            23      51     253      23      45     198 dem        NA
+    ##  6  1947 June           23      51     253      23      45     198 dem        NA
+    ##  7  1947 July           23      51     253      23      45     198 dem        NA
+    ##  8  1947 August         23      51     253      23      45     198 dem        NA
+    ##  9  1947 September      23      51     253      23      45     198 dem        NA
+    ## 10  1947 October        23      51     253      23      45     198 dem        NA
+    ## # … with 812 more rows, and abbreviated variable name ¹​president
+
+``` r
+merge_all = 
+  left_join(merge_pols_snp, unemployment, by = c("year", "month"))
+merge_all
+```
+
+    ## # A tibble: 822 × 11
+    ##     year month     gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem presi…¹ close
+    ##    <dbl> <chr>       <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr>   <dbl>
+    ##  1  1947 January        23      51     253      23      45     198 dem        NA
+    ##  2  1947 February       23      51     253      23      45     198 dem        NA
+    ##  3  1947 March          23      51     253      23      45     198 dem        NA
+    ##  4  1947 April          23      51     253      23      45     198 dem        NA
+    ##  5  1947 May            23      51     253      23      45     198 dem        NA
+    ##  6  1947 June           23      51     253      23      45     198 dem        NA
+    ##  7  1947 July           23      51     253      23      45     198 dem        NA
+    ##  8  1947 August         23      51     253      23      45     198 dem        NA
+    ##  9  1947 September      23      51     253      23      45     198 dem        NA
+    ## 10  1947 October        23      51     253      23      45     198 dem        NA
+    ## # … with 812 more rows, 1 more variable: percentage <dbl>, and abbreviated
+    ## #   variable name ¹​president
+
+In dataset “pols_month”, the dimension of dataset is 822 × 9, the range
+of year is from 1947 to 2015 with key variables: year, month, gov_gop,
+sen_gop, rep_gop, gov_dem, sen_dem, rep_dem, president.
+
+In dataset “snp”, the dimension of dataset is 787 × 3, the range of year
+is from 1969 to 2068, with key variables: year, month, close. The
+variable close represents the closing values of the S&P stock index on
+the associated date.
+
+In dataset “unemployment”, the dimension of dataset is 816 × 3, the
+range of year is from 1948 to 2015, with key variables: year, month,
+percentage. The variable percentage represents percentage of
+unemployment in the associated month of the associated year.
+
+In the resulting dataset “merge_all”, the dimension of dataset is 822 ×
+11, the range of year is from 1947 to 2015, with key variables: year,
+month, gov_gop, sen_gop, rep_gop, gov_dem, sen_dem, rep_dem, president,
+close, percentage.
