--- a/p8105_hw2_hm2900.md
+++ b/p8105_hw2_hm2900.md
@@ -313,6 +313,7 @@ snp =
   mutate(date = mdy(date)) %>%
   separate(date, into = c("year", "month", "day")) %>%
   mutate(year = as.numeric(year),
+         year = ifelse(year > 2022, year - 100, year),
          month = month.name[as.numeric(month)]) %>%
   select(-day) %>%
   arrange(year, month)
@@ -322,16 +323,16 @@ snp
     ## # A tibble: 787 × 3
     ##     year month    close
     ##    <dbl> <chr>    <dbl>
-    ##  1  1969 April    104. 
-    ##  2  1969 August    95.5
-    ##  3  1969 December  92.1
-    ##  4  1969 February  98.1
-    ##  5  1969 January  103. 
-    ##  6  1969 July      91.8
-    ##  7  1969 June      97.7
-    ##  8  1969 March    102. 
-    ##  9  1969 May      103. 
-    ## 10  1969 November  93.8
+    ##  1  1950 April     18.0
+    ##  2  1950 August    18.4
+    ##  3  1950 December  20.4
+    ##  4  1950 February  17.2
+    ##  5  1950 January   17.0
+    ##  6  1950 July      17.8
+    ##  7  1950 June      17.7
+    ##  8  1950 March     17.3
+    ##  9  1950 May       18.8
+    ## 10  1950 November  19.5
     ## # … with 777 more rows
 
 Load and tidy the unemployment data so that it can be merged with the
@@ -416,7 +417,7 @@ of year is from 1947 to 2015 with key variables: year, month, gov_gop,
 sen_gop, rep_gop, gov_dem, sen_dem, rep_dem, president.
 
 In dataset “snp”, the dimension of dataset is 787 × 3, the range of year
-is from 1969 to 2068, with key variables: year, month, close. The
+is from 1950 to 2015, with key variables: year, month, close. The
 variable close represents the closing values of the S&P stock index on
 the associated date.
 
